# autoscaling-cluster

./: .clog.toml  .gitignore  .pre-commit-config.yaml  README.md  README_MODULE.md  autoscaling.py  autoscaling_config.yaml  autoscaling_legacy.py  autoscaling_old.py.backup  main.py  openapi_doc.yml  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py
autoscaling/: __init__.py  __main__.py  ansible.py  config.py  constants.py  csv_writer.py  flavor_selector.py  jobs.py  logger.py  main.py  nodes.py  simplevm_api.py  systemd.py  utils.py  version.py  workers.py
autoscaling/api/: __init__.py  client.py  flavor.py
autoscaling/classes/: config_modes.py  configuration.py  flavor.py  flavor_availability.py  job_info.py  scheduler_interface.py  slurm_interface.py  terminated_protected.py  worker.py
autoscaling/cli/: __init__.py  commands.py  parser.py
autoscaling/cloud/: __init__.py  ansible.py  client.py  exceptions.py
autoscaling/cluster/: __init__.py  api.py  exceptions.py  flavors.py
autoscaling/config/: __init__.py  defaults.py  loader.py  validator.py
autoscaling/core/: __init__.py  autoscaler.py  downscale.py  scale_actions.py  scaling_engine.py  state.py  upscale.py
autoscaling/data/: __init__.py  database.py  fetcher.py  manager.py  models.py
autoscaling/enums/: rescale.py  scalestate.py
autoscaling/forecasting/: __init__.py  predictor.py
autoscaling/plugins/: __init__.py
autoscaling/scheduler/: __init__.py  base.py  exceptions.py  interface.py  job_data.py  node_data.py  slurm.py
autoscaling/services/: __init__.py  runner.py  watcher.py
autoscaling/utils/: __init__.py  converter.py  converters.py  filters.py  helpers.py  logger.py  logging.py
autoscaling/visualization/: __init__.py  plots.py
autoscaling/visualize/: __init__.py
docs/: architecture.md
docs/source/: autoscaling.rst  autoscaling_cli.rst  autoscaling_cloud.rst  autoscaling_cluster.rst  autoscaling_config.rst  autoscaling_core.rst  autoscaling_data.rst  autoscaling_scheduler.rst  autoscaling_services.rst  autoscaling_utils.rst  autoscaling_visualization.rst  conf.py  development.rst  index.rst
playbook/: ansible_hosts  site.yml
playbook/vars/: 192.168.0.125.yml  192.168.0.80.yml  autoscaling.yml  common_configuration.yml  instances.yml  login.yml  scheduler_config.yml  (+1 more)
tests/: README.md  __init__.py  nextflow.config  simple_many_tasks.nf  test_api.py  test_cli_commands.py  test_cli_parser.py  test_config.py  test_converter.py  test_core_scale_actions.py  test_core_state.py  test_data.py  test_fetcher.py  test_models.py  test_scaling_engine.py  test_scheduler.py  test_scheduler_helpers.py  test_utils_filters.py
(+15 files in other folders)
